"top" in page link mobile font-size bug fixing
On the mobile browsers, the font was too small. Now fixed using a
paragraph tag and tex-align property.

--- a/db_style.css
+++ b/db_style.css
@@ -154,7 +154,5 @@ span.command {
 	color:#444;
 }
 .go_top_label{
-	float: right;
-	margin-right: 20px;
-	font-size: 1em;
+	text-align: right;
 }
